--- a/style.css
+++ b/style.css
@@ -26,7 +26,10 @@ h1 {
     margin-bottom:2%;
 }
 td {
-    padding:0;   
+    padding:0;
+    border:1px solid white;
+    width:13vw;
+    height:9vh;
 }
 #perduGagne{
     text-align:center;
