--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@ BODY {
     font-family: 'Open Sans', sans-serif;
     color: white;
     text-align: center;
-    width: 90%;
+    width: 100%;
     height: 50%;
+    padding: 0;
+    margin: 0;
+
 }
 h1 {
     text-align:center;
@@ -22,13 +25,15 @@ h1 {
     border:2px solid #984843;
     width:75%;
     margin-bottom:2%;
-    margin-left: 0.2vw;
+    margin: auto;
+
 }
 #grid {
-    margin: 20px auto;
+    margin: auto;
+    margin-top: 5%;
     display: table;
-    width: 100%;
-    height: 100%;;
+    width: 90%;
+    height: 90%;;
     padding: 2%;
     background: rgb(11, 24, 63);
     border: 1px solid #0044AA;
@@ -73,40 +78,7 @@ footer {
 }
 #resetButton {
    
-    margin-right: 1vw;
+    margin-right: 5vw;
     
 }
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-}
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 2px solid #984843;
-    width: 80%; 
-    color: black;
-}
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
