--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ html {
     height: 100%;
     width: 100%;
     letter-spacing: 2px;
+    max-width: 500px;
+    max-height : 600px;
+    align-content: center;
 }
 
 BODY {
@@ -14,7 +17,7 @@ BODY {
     height: 50%;
     padding:0;
     margin:0;
-    
+    align-content: center;
 }
 
 h1 {
@@ -38,7 +41,8 @@ h1 {
     margin-top:5%;
     display: table;
     width: 90%;
-    height: 100%;;
+    height: 90%;;
+    max-height : 600px;
     padding: 2%;
     background: rgb(8, 8, 8);
     border: 1px solid #157411;
